--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     <pre><code>@inproceedings{fu2024humanplus,
   author    = {Fu, Zipeng and Zhao, Qingqing and Wu, Qi and Wetzstein, Gordon and Finn, Chelsea},
   title     = {HumanPlus: Humanoid Shadowing and Imitation from Humans},
-  booktitle = {arXiv},
+  booktitle = {{Conference on Robot Learning (CoRL)}},
   year      = {2024},
 }</code></pre>
       </div>
