--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
             </span>
           </div>
           <image src="./static/images/logo.jpg" style="width: 60%;"></image>
+          <div class="is-size-4 publication-authors">
+            <b style="color:rgb(255, 100, 100);">Best Paper Award Finalist (top 6) at CoRL 2024</b>
+          </div>
           <div>
             <div class="publication-links">
               <!-- PDF Link. -->
